added doctrine-dbal as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "doctrine/common"]
 	path = doctrine/common
 	url = git://github.com/doctrine/common.git
+[submodule "doctrine/dbal"]
+	path = doctrine/dbal
+	url = git://github.com/doctrine/dbal.git
