Added schema generator plugin
This plugin updates the schema of the applications on execution.

It only does the job if the requester is localhost, the enviroment is
different to production (prod) and if there is actually any change inthe
entities.

--- a/manifest.yml
+++ b/manifest.yml
@@ -8,4 +8,12 @@ services:
   - DoctrineDataAccess\Services\EntityManagerProvider
 
 plugins:
-  - DoctrineDataAccess\Plugins\TransactionsPlugin
+  - { class: DoctrineDataAccess\Plugins\TransactionsPlugin, active: true }
+  #
+  # This plugin updates the schema if needed on execution time.
+  # It's deactivated by default for performance and security.
+  #
+  # IMPORTANT: Deactivate this plugin on production as it raises a warning if
+  # it is active. 
+  #
+  - { class: DoctrineDataAccess\Plugins\SchemaGenerationPlugin, active: false }
